--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 </head>
 <body style="overflow:hidden; margin:0; padding:0;">
+	<script>
+		window.location="https://ubg98.github.io/TapTapShots/";
+	</script>
 <div id="fb-root"></div>
 	<script src="box2d.wasm.js"></script>
 	<noscript>
